[project]
name = "council"
version = "0.1.0"
description = "Query multiple AI CLI coding assistants and consolidate their responses"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
]

[project.scripts]
council = "council:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["council.py"]
